[ADD] cg: code widget ace Python

--- a/code_generator/views/code_generator_model_code.xml
+++ b/code_generator/views/code_generator_model_code.xml
@@ -7,7 +7,7 @@
             <form string="Titre">
                 <sheet>
                     <group>
-                        <field name="code" />
+                        <field name="code" widget="ace" options="{'mode': 'python'}" />
                     </group>
                     <group>
                         <field name="decorator" />
